resolve server ip address